# open-research

./: .env.example  .gitignore  README.md  docker-compose.yml  ollama-entrypoint.sh  start.sh
agent/: MEMORY.md  PLAN.md  PLAN3.md  PLAN4.md  error.md  logs.md  requirement_stage.md
backend/: Dockerfile  main.py  pyproject.toml
backend/app/agents/: finder.py  planner.py  reviewer.py  summarizer.py  writer.py
backend/app/agents/prompts/: __init__.py  finder.md  planner.md  reviewer.md  summarizer.md  writer.md
backend/app/api/: routes.py
backend/app/core/: checkpointer.py  content_fetcher.py  graph.py  ollama_adapter.py  persistence.py  research_manager.py
backend/app/models/: research.py  state.py
backend/docs/: index.html
backend/tests/: conftest.py  test_agent_parsers.py  test_persistence.py  test_research_manager.py  test_routes.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: AgentStatus.tsx  ErrorBoundary.tsx  Header.tsx  ProgressTracker.tsx  ReportViewer.tsx  ResearchInput.tsx  SessionDrawer.tsx  SessionList.tsx  SettingsModal.tsx  SourceLink.tsx  SourceViewer.tsx  TraceLog.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/src/hooks/: useAgentStream.ts  useResearch.ts  useTheme.ts
frontend/src/pages/: MissionControl.tsx  ResultScreen.tsx
frontend/src/stores/: researchStore.ts
frontend/src/types/: html2pdf.d.ts  index.ts
